log
Fri Mar 27 05:34:01 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
a2cbc1a
Fri Mar 27 05:51:53 PM UTC 2026: 
 list.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  0|6
total_score: 0/60
74b521d
Fri Mar 27 05:57:54 PM UTC 2026: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:85:21: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   85 |         nuevo->prev=lista->current ;
      |                     ^~~~~
      |                     list
list.c:85:21: note: each undeclared identifier is reported only once for each function it appears in
d37d2a3
Fri Mar 27 05:58:09 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
14e1e20
Fri Mar 27 06:16:26 PM UTC 2026: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
0af63a1
Fri Mar 27 06:17:19 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
798cce9
Fri Mar 27 06:18:08 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
7e0facf
Fri Mar 27 06:19:15 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
70eb896
Fri Mar 27 06:20:55 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/60
eb387a3
Fri Mar 27 06:21:28 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/60
27cb5d3
Fri Mar 27 06:24:51 PM UTC 2026: 
 tests:  1|5
total_score: 10/60
304d612
Fri Mar 27 09:30:27 PM UTC 2026: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 20/60
01c0667
Fri Mar 27 09:31:54 PM UTC 2026: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:52:5: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   52 |     lista->current=lista->head ;
      |     ^~~~~
      |     list
list.c:52:5: note: each undeclared identifier is reported only once for each function it appears in
list.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
   54 | }
      | ^
cc1: all warnings being treated as errors
6b46e48
Fri Mar 27 09:32:11 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 20/60
8b4c170
Fri Mar 27 09:32:35 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 25/60
4090a47
Fri Mar 27 09:34:55 PM UTC 2026: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 25/60
74759d6
Fri Mar 27 09:36:08 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bf3db47
Fri Mar 27 09:37:08 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|3
total_score: 30/60
a65a67e
Fri Mar 27 09:38:43 PM UTC 2026: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  7|3
total_score: 30/60
1e5e03e
Fri Mar 27 09:40:52 PM UTC 2026: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 40/60
aeab96e
Fri Mar 27 09:46:31 PM UTC 2026: 
 list.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  10|2
total_score: 40/60
4524b97
Fri Mar 27 09:47:01 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 50/60
e428a5f
Fri Mar 27 09:57:51 PM UTC 2026: 
 list.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:140:30: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
  140 |     if (list->current==NULL) return ;
      |                              ^~~~~~
list.c:139:8: note: declared here
  139 | void * popCurrent(List * list) {
      |        ^~~~~~~~~~
917fb44
Fri Mar 27 09:58:18 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 50/60
513386c
Fri Mar 27 10:03:15 PM UTC 2026: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
762be85
